--- a/charts/filebot-bot/templates/deployment.yaml
+++ b/charts/filebot-bot/templates/deployment.yaml
@@ -83,7 +83,7 @@ spec:
                   name: telegram-credentials
                   key: username-classify                   
             - name: SPRING_AMQP_DESERIALIZATION_TRUST_ALL
-              value: true        
+              value: "true"        
           envFrom: 
            - configMapRef: 
               name: configmap-filebotbot                            
