--- a/charts/tdarr/templates/deployment.yaml
+++ b/charts/tdarr/templates/deployment.yaml
@@ -53,6 +53,9 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+            - name: httpServer
+              containerPort: {{ .Values.service.serverPort }}
+              protocol: TCP              
           # livenessProbe:
           #   httpGet:
           #     path: /
