--- a/charts/tdarr/templates/deployment.yaml
+++ b/charts/tdarr/templates/deployment.yaml
@@ -53,7 +53,7 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
-            - name: httpServer
+            - name: httpserver
               containerPort: {{ .Values.service.serverPort }}
               protocol: TCP              
           # livenessProbe:
