--- a/charts/tdarr/templates/service.yaml
+++ b/charts/tdarr/templates/service.yaml
@@ -14,6 +14,6 @@ spec:
     - port: {{ .Values.service.serverPort }}
       targetPort: http
       protocol: TCP
-      name: httpServer      
+      name: httpserver      
   selector:
     {{- include "tdarr.selectorLabels" . | nindent 4 }}
