--- a/charts/tmdb/values.yaml
+++ b/charts/tmdb/values.yaml
@@ -28,6 +28,7 @@ service:
   type: ClusterIP
   port: 8080
 
+tmdbApiKey: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 ingress:
   enabled: false
   annotations: {}
